--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,1 +1,54 @@
-export(hello)
+export(split_by_blocks)
+export(merge_results)
+export(fix_constant_columns)
+export(INT)
+export(find_blocks_vectorized)
+export(find_blocks_vectorized_threshold)
+export(block_matrix)
+export(matrix_inv_block)
+export(matrix_inv_Amatrix)
+export(compute_score)
+
+export(score_test_SynSurrG_multiply)
+export(score_test_SynSurr_multiply)
+export(score_test_OracleG_multiply)
+export(score_test_Oracle_multiply)
+export(score_test_ObsG_multiply)
+export(score_test_Obs_multiply)
+
+export(score_test_SynSurrG_single)
+export(score_test_SynSurr_single)
+export(score_test_OracleG_single)
+export(score_test_Oracle_single)
+export(score_test_ObsG_single)
+export(score_test_Obs_single)
+
+export(DGP)
+export(DGP_GRMr)
+export(DGP_GRMr_nullmodel_step1)
+export(DGP_GRMr_nullmodel_step2)
+export(DGP_GRMr_nullmodel_step3)
+
+export(typeIerror_generate_gmatrix)
+export(generate_gmatrix_kinship)
+
+export(SynSurrG_typeIerror_step1)
+export(SynSurrG_ablation_estimate)
+export(OracleG_typeIerror_step1)
+export(OracleG_ablation_estimate)
+export(ObsG_typeIerror_step1)
+export(ObsG_ablation_estimate)
+
+export(SynSurr_typeIerror_step1)
+export(Oracle_typeIerror_step1)
+export(Obs_typeIerror_step1)
+export(SynSurr_ablation_estimate)
+export(Oracle_ablation_estimate)
+export(Obs_ablation_estimate)
+
+export(DGP_GRMr_gmodel_step3)
+export(generate_genotypes_rho)
+export(DGP_GRMr_gmodel_step3_rho)
+export(score_test_SynSurrG_power_sim_one_g_to_one_Y)
+export(score_test_ObsG_power_sim_one_g_to_one_Y)
+export(score_test_OracleG_power_sim_one_g_to_one_Y)
