--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,3 +52,10 @@ export(DGP_GRMr_gmodel_step3_rho)
 export(score_test_SynSurrG_power_sim_one_g_to_one_Y)
 export(score_test_ObsG_power_sim_one_g_to_one_Y)
 export(score_test_OracleG_power_sim_one_g_to_one_Y)
+
+importFrom(Matrix, sparseMatrix)
+importFrom(Matrix, Diagonal)
+importFrom(Matrix, bdiag)
+importFrom(Matrix, chol)
+importFrom(Matrix, chol2inv)
+importMethodsFrom(Matrix, summary)
