--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,3 +59,6 @@ importFrom(Matrix, bdiag)
 importFrom(Matrix, chol)
 importFrom(Matrix, chol2inv)
 importMethodsFrom(Matrix, summary)
+import(Matrix)
+import(methods)
+importFrom(Matrix, sparseMatrix, Diagonal, bdiag, chol, chol2inv)
