--- a/NAMESPACE
+++ b/NAMESPACE
@@ -62,3 +62,4 @@ importMethodsFrom(Matrix, summary)
 import(Matrix)
 import(methods)
 importFrom(Matrix, sparseMatrix, Diagonal, bdiag, chol, chol2inv)
+importFrom(dplyr, "%>%")
