--- a/NAMESPACE
+++ b/NAMESPACE
@@ -63,3 +63,4 @@ import(Matrix)
 import(methods)
 importFrom(Matrix, sparseMatrix, Diagonal, bdiag, chol, chol2inv)
 importFrom(dplyr, "%>%")
+import(parallel)
